# recommender-lib

./: README.md  main.py  pyproject.toml
notebooks/: 01-recommender-evaluation.ipynb
notebooks/.ipynb_checkpoints/: 01-recommender-evaluation-checkpoint.ipynb
recommender_lib/: .gitignore
recommender_lib/dataprep/: movielens.py
recommender_lib/jobs/: basic_evaluation.py
recommender_lib/model/: surprise_model.py
recommender_lib/training/: evaluated_algorithm.py  evaluation_data.py  pipeline.py  recommender_metrics.py  recommender_model.py
tests/: test_recommender_lib.py
